--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -28,11 +28,8 @@ Resources:
 
           def handler(event, context):
 
-            # runs with --privileged flag locally only to allow
-            # apparmor profile to be loaded within the container
-
             docker_command = ' '.join([
-              "docker run --rm --privileged -t",
+              "docker run --rm -t",
               f"--name {event['name']}-{random_string(10)}",
               f"{'-d' if event['detached'] else ''}",
               f"--env ACTIVITY_ARN={event.get('activityArn', '')}",
