--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -273,27 +273,21 @@ jobs:
           echo "::set-output name=sandbox-id::$SANDBOX_ID"
           echo "::set-output name=kubernetes-env::$KUBERNETES_ENV"
 
-          cp .flux.yaml $DEPLOYMENT_NAME.yaml
-
-          yq -i 'select(documentIndex == 0) |
-            .metadata.name = strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
-            .metadata.labels.sandboxId = strenv(SANDBOX_ID)
-          ' $DEPLOYMENT_NAME.yaml
-
-          yq -i 'select(documentIndex == 1) |
-            .metadata.name = strenv(DEPLOYMENT_NAME) |
-            .metadata.namespace = strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
-            .metadata.labels.sandboxId = strenv(SANDBOX_ID) |
-            .spec.chart.ref = strenv(CHART_REF) |
-            .spec.releaseName = strenv(DEPLOYMENT_NAME) |
-            .spec.values.clusterEnv = strenv(KUBERNETES_ENV) |
-            .spec.values.pipelineRunner.image strenv(IMAGE_NAME) + "-pipeline-runner" |
-            .spec.values.values.sandboxId = strenv(SANDBOX_ID) |
-            .spec.values.r.memoryRequest = strenv(MEMORY_REQUEST) |
-            .spec.values.serviceAccount.iamRole = "worker-role-" + strenv(KUBERNETES_ENV) |
-            .spec.values.datadogTags = "kube_namespace:" + strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
-            .metadata.annotations["filter.fluxcd.io/pipelineRunner"] = "glob:" + strenv(IMAGE_GLOB) + "-pipeline-runner" |
-          ' $DEPLOYMENT_NAME.yaml
+          yq 'select(di == 0).metadata.name = strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
+            select(di == 0).metadata.labels.sandboxId = strenv(SANDBOX_ID) |
+            select(di == 1).metadata.name = strenv(DEPLOYMENT_NAME) |
+            select(di == 1).metadata.namespace = strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
+            select(di == 1).metadata.labels.sandboxId = strenv(SANDBOX_ID) |
+            select(di == 1).spec.chart.ref = strenv(CHART_REF) |
+            select(di == 1).spec.releaseName = strenv(DEPLOYMENT_NAME) |
+            select(di == 1).spec.values.clusterEnv = strenv(KUBERNETES_ENV) |
+            select(di == 1).spec.values.pipelineRunner.image strenv(IMAGE_NAME) + "-pipeline-runner" |
+            select(di == 1).spec.values.values.sandboxId = strenv(SANDBOX_ID) |
+            select(di == 1).spec.values.r.memoryRequest = strenv(MEMORY_REQUEST) |
+            select(di == 1).spec.values.serviceAccount.iamRole = "worker-role-" + strenv(KUBERNETES_ENV) |
+            select(di == 1).spec.values.datadogTags = "kube_namespace:" + strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
+            select(di == 1).metadata.annotations["filter.fluxcd.io/pipelineRunner"] = "glob:" + strenv(IMAGE_GLOB) + "-pipeline-runner" |
+          ' .flux.yaml > $DEPLOYMENT_NAME.yaml
 
           cat $DEPLOYMENT_NAME.yaml
         env:
