--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -345,6 +345,7 @@ jobs:
           echo "sandbox-id=$SANDBOX_ID" >> $GITHUB_OUTPUT
           echo "kubernetes-env=$KUBERNETES_ENV" >> $GITHUB_OUTPUT
 
+          export GITHUB_OWNER=${{ github.repository_owner }}
           export NAMESPACE="$DEPLOYMENT_NAME-$SANDBOX_ID"
           export CHART_CRD_NAME="$DEPLOYMENT_NAME-chart"
           export IMAGE_POLICY_TAG="{\"\$imagepolicy\": \"$NAMESPACE:$DEPLOYMENT_NAME:tag\"}"
