--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -25,7 +25,8 @@ Suggests:
     styler,
     testthat (>= 3.0.0),
     usethis,
-    glmGamPoi
+    glmGamPoi,
+    hdf5r
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
